--- a/forms/mainwindow.ui
+++ b/forms/mainwindow.ui
@@ -231,7 +231,7 @@
                                                                   </size>
                                                               </property>
                                                               <property name="text">
-                                                                  <string>Reverse</string>
+                                                                  <string>Invert</string>
                                                               </property>
                                                           </widget>
                                                       </item>
